--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "start": "ts-node src/app.ts",
     "lint": "eslint",
-    "lint:fix": "yarn lint --fix",
+    "lint:fix": "yarn lint -- --fix",
     "test": "jest",
     "test:watch": "yarn test -- --watchAll",
     "start:dev": "nodemon -e ts -w ./src -x npm start"
